Programs/CodeChef - Quarantest/Hospital Beds/attic/stderr
c:\Users\prash\Documents\Salil\Programming\Competitive-Programmming\Programs\CodeChef - Quarantest\Hospital Beds\sol.cpp: In function 'int main()':
c:\Users\prash\Documents\Salil\Programming\Competitive-Programmming\Programs\CodeChef - Quarantest\Hospital Beds\sol.cpp:83:14: error: expected ';' before '}' token
   83 |        no = 1
      |              ^
      |              ;
   84 |      }
      |      ~        
